--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ astroid==2.11.5
 attrs==21.4.0
 beautifulsoup4==4.11.1
 bleach==5.0.0
+boto3==1.23.4
+botocore==1.26.4
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.3
@@ -14,6 +16,7 @@ croniter==1.3.4
 dagit==0.14.15
 dagster==0.14.15
 dagster-graphql==0.14.15
+dataclasses-json==0.5.7
 defusedxml==0.7.1
 dill==0.3.4
 docstring-parser==0.14.1
@@ -31,6 +34,7 @@ humanfriendly==10.0
 idna==3.3
 isort==5.10.1
 Jinja2==3.1.2
+jmespath==1.0.0
 jsonschema==4.5.1
 jupyter-client==7.3.1
 jupyter-core==4.10.0
@@ -38,8 +42,11 @@ jupyterlab-pygments==0.2.2
 lazy-object-proxy==1.7.1
 Mako==1.2.0
 MarkupSafe==2.0.1
+marshmallow==3.15.0
+marshmallow-enum==1.5.1
 mccabe==0.7.0
 mistune==0.8.4
+mypy-extensions==0.4.3
 nbclient==0.6.3
 nbconvert==6.5.0
 nbformat==5.4.0
@@ -64,7 +71,9 @@ PyYAML==6.0
 pyzmq==22.3.0
 requests==2.27.1
 Rx==1.6.1
+s3transfer==0.5.2
 six==1.16.0
+smart-open==6.0.0
 sniffio==1.2.0
 soupsieve==2.3.2.post1
 SQLAlchemy==1.4.36
@@ -78,6 +87,7 @@ tornado==6.1
 tqdm==4.64.0
 traitlets==5.2.0
 typing-compat==0.1.0
+typing-inspect==0.7.1
 typing_extensions==4.2.0
 urllib3==1.26.9
 uvicorn==0.17.6
