feat: add schedule for scraping articles by category

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,17 @@
+# App settings
 APP_ENV=
 APP_NAME=
+
+SCHEDULE_TIMEZONE=
+VNEXPRESS_TIMEZONE=
+
+# Repo settings
 VNEXPRESS_REPO_NAME=
+
+# AWS S3 settings
 S3_BUCKET_NAME=
 S3_BUCKET_URI=
+
+# Scraping settings
 PAGE_SCRAPING_THRESHOLD=
 SCRAPE_SLEEP_TIME=
