chore: add latest file for CDC

--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,10 @@ VNEXPRESS_TIMEZONE=
 # Repo settings
 VNEXPRESS_REPO_NAME=
 
-# AWS S3 settings
+# AWS S3/File settings
 S3_BUCKET_NAME=
 S3_BUCKET_URI=
+LATEST_ARTICLES_DT_FILENAME
 
 # Scraping settings
 PAGE_SCRAPING_THRESHOLD=
