refactor: change scrape articles job to OOP-based implementation for further integration

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ APP_NAME=
 SCHEDULE_TIMEZONE=
 VNEXPRESS_TIMEZONE=
 
-# Repo settings
-VNEXPRESS_REPO_NAME=
+# VNExpress Repo settings
+VNEXPRESS_PROVIDER_NAME=
 
 # AWS S3/File settings
 S3_BUCKET_NAME=
