feat(in-progress): save model predictions via API calls

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,16 @@ ARTICLE_CURSORS_FILENAME=
 # Scraping settings
 PAGE_SCRAPING_THRESHOLD=
 SCRAPE_SLEEP_TIME=
+
+# API settings
+ALCHEMY_API_HOST=
+ALCHEMY_API_PORT=
+ALCHEMY_API_URL=
+
+# Duty Mongo Settings
+DUTY_MONGO_HOST=
+DUTY_MONGO_PORT=
+DUTY_MONGO_NAME=
+DUTY_MONGO_USERNAME=
+DUTY_MONGO_PASSWORD=
+DUTY_MONGODB_URI=
