--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.6.5
 aniso8601==7.0.0
 anyio==3.6.1
 asgiref==3.5.1
+aspy.refactor-imports==3.0.1
 astroid==2.11.5
 attrs==21.4.0
 beautifulsoup4==4.11.1
@@ -60,6 +61,7 @@ promise==2.3
 protobuf==3.20.1
 Pygments==2.12.0
 pylint==2.13.9
+pymongo==4.1.1
 pyparsing==3.0.9
 pyrsistent==0.18.1
 python-dateutil==2.8.2
