--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ coloredlogs==14.0
 croniter==1.3.4
 dagit==0.14.15
 dagster==0.14.15
+dagster-aws==0.14.15
 dagster-graphql==0.14.15
 dataclasses-json==0.5.7
 defusedxml==0.7.1
