build: add Docker build scripts & fix minor issues

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-# App settings
 APP_ENV=
 APP_NAME=
 
@@ -6,24 +5,24 @@ SCHEDULE_TIMEZONE=
 VNEXPRESS_TIMEZONE=
 
 
-# AWS S3/File settings
 S3_BUCKET_NAME=
 S3_BUCKET_URI=
 ARTICLE_CURSORS_FILENAME=
 
-# Scraping settings
 PAGE_SCRAPING_THRESHOLD=
 SCRAPE_SLEEP_TIME=
 
-# API settings
 ALCHEMY_API_HOST=
 ALCHEMY_API_PORT=
 ALCHEMY_API_URL=
 
-# Duty Mongo Settings
 DUTY_MONGO_HOST=
 DUTY_MONGO_PORT=
 DUTY_MONGO_NAME=
 DUTY_MONGO_USERNAME=
 DUTY_MONGO_PASSWORD=
-DUTY_MONGODB_URI=
+DUTY_MONGO_URI=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
