build: sync Docker scripts

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_ENV=
 APP_NAME=
+DAGIT_PORT=
 
 SCHEDULE_TIMEZONE=
 VNEXPRESS_TIMEZONE=
-
 
 S3_BUCKET_NAME=
 S3_BUCKET_URI=
@@ -23,6 +23,12 @@ DUTY_MONGO_USERNAME=
 DUTY_MONGO_PASSWORD=
 DUTY_MONGO_URI=
 
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=
+
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+DAGSTER_CURRENT_IMAGE=
