feat: mount volume Postgres Docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
     container_name: postgresql
     env_file:
       - .env
+    volumes:
+      - ./data:/var/lib/postgresql/data
 
   article:
     build:
